--- a/style.css
+++ b/style.css
@@ -1,22 +1,71 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap');
 body{
-    background-color: aqua;
-}
-.container{
-    height: 879px;
+/* 
+    font-family: "Pangolin", cursive;
+    font-weight: 400;
+    font-style: normal; */
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: italic;
+    height: 100vh;
     width: 100%;
-    border: 1px solid black;
+    /* background-image: url(./img/bg.avif);
+    background-color: aqua;
+    background-repeat: no-repeat; */
+    background: rgb(255,207,45);
+background: linear-gradient(90deg, rgba(255,207,45,1) 0%, rgba(29,253,224,1) 50%, rgba(252,69,193,1) 100%);
+}
+
+
+.container{
+    /* margin-top: 18px; */
+    height: 897px;
+    width: 900px;
+    /* border: 1px solid black; */
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .main{
-    height: 600px;
+    height: 650px;
     width: 800px;
-    border: 1px solid black;
+    border: 1px ;
+    overflow: auto;
+    background-color: rgba(255, 255, 255, 0.973);
+    border-radius: 35px;
     
+}
+.h-one{
+    margin-left: 60px;
+    margin-top: 30px;
+    /* background-color: black; */
+}
+.h-one > h1{
+  font-size: 40px;
+}
+.img-logo{
+    height: 60px;
+    width: 100px;
+    margin-left: 300px;
 }
 #todo{
     margin-left: 50px;
-    height: 25px;
+    margin-bottom: 40px;
+    height: 35px;
     width: 400px;
+    border-radius: 10px;
+}
+ul li {
+    margin-left: 50px;
+    margin-bottom: 20px;
+    height: 30px;
+    width: 550px;
+    list-style: none;
+    
+}
+ul li input{
+    height: 30px;
+    min-width: 350px;
+    
+    
+    
 }
