--- a/style.css
+++ b/style.css
@@ -68,3 +68,11 @@ ul li input {
     height: 30px;
     min-width: 350px;
 }
+#img{
+    width:24px;
+    height: 20px;
+}
+#img-2{
+    width:24px;
+    height: 20px;
+}
